[gd_scene load_steps=2 format=3 uid="uid://game_over_scene"]

[ext_resource type="Script" path="res://src/ui/game_over.gd" id="1_gameover"]

[node name="GameOver" type="CanvasLayer"]
process_mode = 3
layer = 90
script = ExtResource("1_gameover")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.15, 0.0, 0.0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(450, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Title" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
theme_override_colors/font_color = Color(1.0, 0.3, 0.3, 1.0)
text = "Game Over"
horizontal_alignment = 1

[node name="Message" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(0.85, 0.85, 0.85, 1.0)
text = "You ran out of lives!"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="ButtonRow" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="RetryButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/ButtonRow"]
layout_mode = 2
custom_minimum_size = Vector2(160, 55)
theme_override_font_sizes/font_size = 24
text = "Try Again"

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/ButtonRow"]
layout_mode = 2
custom_minimum_size = Vector2(160, 55)
theme_override_font_sizes/font_size = 24
text = "Quit"
